<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/white_toolbar">

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/white_toolbar">

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/white_toolbar"
            android:layout_margin="8dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/user_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name_text"/>

                    <EditText
                        android:id="@+id/user_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name_text"
                        android:layout_below="@id/user_name_tv"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_white_back"
                        android:padding="10dp"
                        android:layout_marginBottom="5dp"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/gender_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_gender"
                        />

                    <RadioGroup
                        android:id="@+id/gender_rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/gender_tv"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <RadioButton
                            android:id="@+id/male_rb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:checked="true"/>

                        <RadioButton
                            android:id="@+id/female_rb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"/>

                        <RadioButton
                            android:id="@+id/others_rb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/others"/>

                    </RadioGroup>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/p_email_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"/>

                    <EditText
                        android:id="@+id/p_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:layout_below="@id/p_email_tv"
                        android:layout_marginTop="10dp"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/border_white_back"
                        android:padding="10dp"
                        android:layout_marginBottom="5dp"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/u_dob_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dob"/>

                    <EditText
                        android:id="@+id/u_dob_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth"
                        android:layout_below="@id/u_dob_tv"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_white_back"
                        android:padding="10dp"
                        android:layout_marginBottom="5dp"
                        android:focusable="false"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/photo_upload_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_photo"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/photo_upload_tv">

                        <TextView
                            android:id="@+id/upload_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/border_white_back"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/upload"
                            android:gravity="center_vertical"
                            android:drawablePadding="5dp"
                            android:layout_gravity="center_vertical"
                            android:drawableLeft="@drawable/ic_file_upload_black"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/user_iv"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:src="@drawable/user_avater"
                            app:civ_border_width="1dp"
                            app:civ_border_color="@android:color/white"/>


                    </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/submit_profile_bt"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/submit"
                        android:backgroundTint="@color/colorPrimaryDark"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textColor="@android:color/white"/>



                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>