<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VerificationActivity">

    <RelativeLayout
        android:id="@+id/icon_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/dummy_app_logo" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/icon_relativeLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/code_sent_info"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:drawableLeft="@drawable/ic_info_green"
            android:drawablePadding="5dp"
            />

        <ProgressBar
            android:id="@+id/v_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <EditText
            android:id="@+id/code_et"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_progressbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_white_back"
            android:digits="0123456789"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:hint="@string/enter_verification_code"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_bt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/code_et"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

    </RelativeLayout>

</RelativeLayout>